--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,13 +15,32 @@ body {
     width: 200px;
     height: 250px;
     border: 2px solid black;
-    .sock-item-1 {
+    .sock-item {
       position: absolute;
-      width: 100%;
-      height: 70px;
-      transform: translate(0, 250%);
-      border-radius: 35px;
+    }
+    .sock-item-1,
+    .sock-item-2 {
       background-color: red;
+    }
+    .sock-item-1 {
+      width: 100%;
+      height: 100px;
+      transform: translateY(-100%);
+      top: 100%;
+      border-radius: 50px 25px 25px 50px;
+    }
+    .sock-item-2 {
+      width: 100px;
+      height: 80%;
+      transform: translate(-100%, -100%);
+      left: 100%;
+      top: 100%;
+      border-radius: 0 0 50px;
+    }
+    .sock-item-3 {
+      width: 30px;
+      width: 100px;
+      background: gray;
     }
   }
 }
