--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,7 +13,7 @@ body {
   .container {
     position: relative;
     width: 200px;
-    height: 250px;
+    height: 225px;
     border: 2px solid black;
     .sock-item {
       position: absolute;
@@ -28,19 +28,34 @@ body {
       transform: translateY(-100%);
       top: 100%;
       border-radius: 50px 25px 25px 50px;
+      &::before {
+        position: absolute;
+        content: "";
+        width: 50px;
+        height: 100%;
+        // transform: translate(0, 100%);
+        left: 5px;
+        // background: green;
+        border-radius: 100%;
+      }
     }
     .sock-item-2 {
       width: 100px;
-      height: 80%;
+      height: 90%;
       transform: translate(-100%, -100%);
       left: 100%;
       top: 100%;
       border-radius: 0 0 50px;
-    }
-    .sock-item-3 {
-      width: 30px;
-      width: 100px;
-      background: gray;
+      &::before {
+        position: absolute;
+        content: "";
+        width: 150%;
+        height: 50px;
+        transform: translate(-50%, -50%);
+        left: 50%;
+        background: rgb(230, 230, 230);
+        border-radius: 10px;
+      }
     }
   }
 }
